# mediocrestan-and-extremistan

./: README.md  distributions.ipynb  pyproject.toml
