[project]
name = "mediocrestan-and-extremistan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "pandas-market-calendars>=4.4.0",
]
